--- a/server/package.json
+++ b/server/package.json
@@ -24,37 +24,38 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "crypto": "^1.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-rsa": "^1.1.1",
-    "winston": "^3.11.0",
-    "uuid": "^9.0.1"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^20.8.7",
-    "@types/express": "^4.17.20",
-    "@types/pg": "^8.10.7",
     "@types/bcrypt": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.4",
     "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/node": "^20.8.7",
+    "@types/node-rsa": "^1.1.4",
+    "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
